---------------------------------------------------------------------------------------------------
Version: 0.0.5
Date: ????
  Info:
    - Fix pillar only forming one outgoing connection
---------------------------------------------------------------------------------------------------
Version: 0.0.4
Date: 2025. 04. 20
  Info:
    - Setup the luarendering refresh template
    - Do the visual connecting and disconnecting
    - Add an occluder for the top of the tip
---------------------------------------------------------------------------------------------------
Version: 0.0.3
Date: 2025. 04. 20
  Info:
    - Adjust selection and colission boxes
    - mark the building as tall
    - Add the riser ontop and control it via scripting
    - Actually just swap the pipe connections
    - Riser begone
---------------------------------------------------------------------------------------------------
Version: 0.0.2
Date: 2025. 04. 20
  Info:
    - Setup the player facing prototypes
---------------------------------------------------------------------------------------------------
Version: 0.0.1
Date: 2025. 04. 19
  Info:
    - Initial commit